testsuite/tests/indexed-types/should_compile/T9840a.hs
{-# LANGUAGE TypeFamilies #-}

module T9840a where

import {-# SOURCE #-} T9840

type family G a where

bar :: X a -> X a
bar = id
