testsuite/tests/indexed-types/should_fail/T7102C.hs
{-# LANGUAGE TypeFamilies #-}
module T7102C where
import T7102A
type instance T a b = b
to :: T a b -> b
to = id
